# transactron

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.html  development-environment.html  evlog.html  genindex.html  getting-started.html  index.html  modules.html  objects.inv  pipeline-guide.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  transactions.html  transactron.cmd.html  transactron.core.html  transactron.evlog.html  transactron.html  transactron.lib.html  transactron.testing.html  transactron.utils.amaranth_ext.html  transactron.utils.html
.doctrees/: api.doctree  development-environment.doctree  environment.pickle  evlog.doctree  getting-started.doctree  index.doctree  modules.doctree  pipeline-guide.doctree  transactions.doctree  transactron.cmd.doctree  transactron.core.doctree  transactron.doctree  transactron.evlog.doctree  transactron.lib.doctree  transactron.testing.doctree  transactron.utils.amaranth_ext.doctree  transactron.utils.doctree
.github/workflows/: deploy_gh_pages.yml  main.yml  publish-to-pypi.yml
_sources/: development-environment.md.txt  evlog.md.txt  transactron.cmd.rst.txt  transactron.core.rst.txt  transactron.evlog.rst.txt  transactron.lib.rst.txt  transactron.rst.txt  transactron.testing.rst.txt  transactron.utils.amaranth_ext.rst.txt  transactron.utils.rst.txt
docs/: evlog.md  getting-started.md  index.md  pipeline-guide.md  transactions.md
docs/_code/: pipelined_mult.py
test/: conftest.py  test_methods.py  test_shifter.py
test/core/: test_branches.py  test_methods.py  test_simultaneous.py  test_transactions.py
test/evlog/: test_evlog.py
test/lib/: test_allocators.py  test_basicio.py  test_connectors.py  test_dependencies.py  test_dependency_key.py  test_fifo.py  test_metrics.py  test_pipeline.py  test_reqres.py  test_simultaneous.py  test_stack.py  test_storage.py  test_stream.py  test_transformers.py
test/testing/: test_adapter.py  test_log.py  test_method_mock.py  test_validate_arguments.py
test/utils/: test_amaranth_ext.py  test_assign.py  test_onehotswitch.py  test_shifter.py  test_utils.py
transactron/: __init__.py  profiler.py  tracing.py
transactron/cmd/: evlog.py
transactron/core/: __init__.py  body.py  context.py  interface.py  keys.py  manager.py  method.py  sugar.py  (+4 more)
(+56 files in other folders)
