[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "transactron"
dynamic = ["version"]
readme = "README.md"
description = "Hardware transactions library for Amaranth"
dependencies = [
    "amaranth ~= 0.5.8",
    "amaranth-stubs ~= 0.5.0.0",
    "dataclasses-json ~= 0.6.3",
    "tabulate ~= 0.9.0",
    "networkx ~= 3.4.2"
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
]
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]

[project.urls]
"Documentation" = "https://kuznia-rdzeni.github.io/transactron/"
"Source Code" = "https://github.com/kuznia-rdzeni/transactron"
"Bug Tracker" = "https://github.com/kuznia-rdzeni/transactron/issues"

[project.optional-dependencies]
testing = [
    "pytest >= 8.0.0, < 10.0",
    "hypothesis <= 6.99.6, < 6.153",
]

[dependency-groups]
lint = [
    "pyright == 1.1.393",
    "flake8 == 7.0.0",
    "black == 24.4.2",
    "pep8-naming == 0.13.3",
    "pre-commit == 2.16.0",
]
test = [
    "pytest == 8.0.0",
    "pytest-xdist == 3.5.0",
    "pytest-cov == 7.1.0",
    "hypothesis == 6.99.6",
]
docs = [
    "Sphinx == 9.1.0",
    "sphinx-rtd-theme == 3.1.0",
    "myst-parser == 5.1.0",
    "numpydoc == 1.10.0",
    "sphinxcontrib-mermaid == 2.0.2",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
]

[project.scripts]
transactron-prof = "transactron.cmd.tprof:main"
transactron-evlog = "transactron.cmd.evlog:main"

[tool.setuptools_scm]

[tool.pyright]
include = ["transactron", "test", "scripts"]
reportMissingImports = true
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false

[tool.pytest.ini_options]
minversion = "7.2.2"
testpaths = "tests"
norecursedirs = ['*.egg', '.*', 'build', 'dist', 'venv', '__traces__', '__pycache__']
filterwarnings = [
    "ignore:cannot collect test class 'TestbenchContext':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestbenchIO':pytest.PytestCollectionWarning",
    "ignore:No files were found in testpaths:pytest.PytestConfigWarning:"
]
